# remote-compile

./: CMakeLists.txt  Rakefile  lib.c  lib.h  rake-c.c  rakeserver.c  strsplit.c  test.c
